# frappe_social

./: .eslintignore  .eslintrc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
frappe_social/: boot.py  hooks.py  modules.txt  patches.txt
frappe_social/config/: desktop.py  docs.py
frappe_social/frappe_social/doctype/post/: post.js  post.json  post.py
frappe_social/frappe_social/doctype/post_comment/: post_comment.js  post_comment.json  post_comment.py  test_post_comment.py
frappe_social/patches/: link_post_in_post_comment.py
frappe_social/public/: build.json
frappe_social/public/css/: social.css
frappe_social/public/css-rtl/: social.css
frappe_social/public/js/: frappe_social.bundle.js  frappe_social.bundle.less
frappe_social/public/js/frappe/social/: Home.vue  SocialHome.vue  social_factory.js  social_home.js  social_home.js.map
frappe_social/public/js/frappe/social/components/: ActivitySidebar.vue  ImageViewer.vue  NotFound.vue  Post.vue  PostAction.vue  PostComment.vue  PostDropdownMenu.vue  PostLoader.vue  PostSidebar.vue  PostSkeleton.vue  ProfileBanner.vue  ProfileSidebar.vue
frappe_social/public/js/frappe/social/pages/: Profile.vue  UserList.vue  Wall.vue
frappe_social/public/less/: social.less  variables.less
